--- a/styles/main.styl
+++ b/styles/main.styl
@@ -16,3 +16,9 @@ body, html
   position absolute
   width 100%
   height 100%
+#canvas2D
+  position absolute
+  width 100%
+  height 100%
+  z-index 1
+
