Start game overlay

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -2,6 +2,7 @@
 @import "info"
 @import "map"
 @import "guide"
+@import "gameOverlay"
 
 body, html
   background-color #000
@@ -16,9 +17,4 @@ body, html
   position absolute
   width 100%
   height 100%
-#canvas2D
-  position absolute
-  width 100%
-  height 100%
-  z-index 1
 
