Move selection rect to game class as there are too many shared variables

--- a/client/styles/gameOverlay.pcss
+++ b/client/styles/gameOverlay.pcss
@@ -8,6 +8,7 @@
   left: 0;
   touch-action: none;
   pointer-events: none;
+  z-index: 1000;
 }
 /* To forward events to main canvas where BJS is hooked
  pointer-events none //
